ipad spacing issues

--- a/_sass/4-pages/_nav.sass
+++ b/_sass/4-pages/_nav.sass
@@ -61,8 +61,8 @@
     font-size: 1.3em
     list-style: none
     color: #000
-    margin: 40px 0 0
-    padding: 0 0 0 25px
+    margin: 0
+    padding-bottom: 25px
     line-height: 1.7
     padding-bottom: 15px
     cursor: pointer
@@ -79,3 +79,4 @@
     li
       float: none
       padding: 0
+      margin-top: 20px 
